// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<div
  class="CardButtonRow"
>
  
</div>
`;

exports[`shows multiple children when passed 1`] = `null`;

exports[`shows the children passed 1`] = `
<div
  class="CardButtonRow"
>
  <div
    class="ButtonWrap"
  >
    <button
      class="Button"
    >
      Child
    </button>
  </div>
</div>
`;
